--- a/11-Practica-Flexbox/style.css
+++ b/11-Practica-Flexbox/style.css
@@ -1,10 +1,127 @@
-body {
-    background-color: cadetblue;
-    font-family: sans-serif;
-}
-
 * {
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-}
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  body {
+    font-family: sans-serif;
+  }
+  
+  .container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    background-color: rgb(0, 115, 255);
+  }
+  
+  header {
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+    border-bottom: 1px solid darkslategray;
+/*     background-color: red; */
+  }
+
+  h1 {
+  /background-color: violet;
+  }
+
+  nav {
+    display: flex;
+    gap: 1rem;
+  /*   background-color: aqua; */
+  }
+
+  a {
+    font-weight: bold;
+   color: black;
+   text-decoration: none;
+
+  }
+
+  a:hover {
+    color: lightgreen;
+  }
+  
+  main {
+    flex-grow: 1;
+    display: flex;
+    background-color: green;
+  }
+
+  aside {
+    padding: 1rem;
+    background-color: rgb(219, 211, 211);
+  }
+
+  h2 {
+    color: darkblue;
+    margin-bottom: 2rem;
+  }
+
+  ul {
+    list-style: none;
+  }
+
+  li {
+    color: rgb(20, 17, 17);
+    margin-bottom: 0.5rem;
+  }
+
+  section {
+    padding: 1rem;
+    flex-grow: 1;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    align-content: flex-start;
+    background-color: rgb(14, 10, 78);
+  }
+
+  .card {
+    text-align: center;
+    padding: 0.5rem;
+    border-radius: 1rem;
+    background-color: rgb(251, 218, 171);
+    cursor: pointer;
+  }
+
+  .card:hover {
+    background-color: rgb(210, 168, 250);
+  }
+
+  img {
+    border-radius: 0.5rem;
+  }
+
+  h3 {
+    margin: 0.5rem;
+    color: darkblue;
+  }
+
+  
+  footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+ /*    background-color: yellow; */
+  }
+
+  .copyright {
+    color: darkblue;
+/*     background-color: cadetblue; */
+  }
+
+  .socialmedia {
+    display: flex;
+    gap: 1rem;
+/*     background-color: crimson; */
+  }
+
+  .socialmedia a {
+    font-size: 1.5rem;
+    padding: 0.5rem;
+  }
